changed max-width to min-width to prevent too small popovers

--- a/app/styles/tink/_variables.scss
+++ b/app/styles/tink/_variables.scss
@@ -691,7 +691,7 @@ $popover-bg-color:                      lighten($nav-aside-item-open-color, 2) !
 $popover-border-color:                  rgba(0,0,0,.2) !default;
 $popover-fallback-border-color:         $gray !default;
 $popover-border-width:                  1px;
-$popover-max-width:                     300px !default;
+$popover-width:                         220px !default;
 $popover-padding:                       $padding-base-vertical !default;
 $popover-header-bg:                     $white !default;
 
